// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CaseList Case list while loading data 1`] = `
<button
  className="usa-button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Loading...
</button>
`;

exports[`Storyshots CaseList Case list with some data 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          Hello world
        </td>
        <td>
          ABC
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          Hello world2
        </td>
        <td>
          ABC2
        </td>
      </tr>
    </tbody>
  </table>,
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Load More Cases
  </button>,
]
`;

exports[`Storyshots CaseList Empty case list 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td />
        <td />
        <td />
      </tr>
    </tbody>
  </table>,
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Load More Cases
  </button>,
]
`;

exports[`Storyshots FormattedDate Last Refresh 1`] = `
<p>
  Last Refresh
  : 
  8/11/2014, 12:00:00 AM
</p>
`;

exports[`Storyshots ReceiptList Empty Receipt List 1`] = `
<p>
  No cases found.
</p>
`;

exports[`Storyshots ReceiptList Tabular Cases-to-Work List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th>
        Receipt Number
      </th>
      <th>
        Case Status
      </th>
      <th>
        Case Substatus
      </th>
      <th>
        Platform
      </th>
      <th>
        Assigned
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td />
      <td />
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Snoozed Case List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th>
        Receipt Number
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="https://internal-prod-elis2.uscis.dhs.gov/InternalApp/app/#/case/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Well done!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert dismissible 1`] = `
<div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a success alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a warning alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--info usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      This is some information.
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Watch out for this!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className="usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;
